# studio-basil-xin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/image_studio/: __init__.py  assets.py  auth.py  db.py  generation.py  main.py  preset_derivation.py  providers.py  security.py  settings.py  workspaces.py
backend/tests/: conftest.py  test_auth.py  test_frontend_styles.py  test_generation.py  test_preset_derivation.py  test_providers.py  test_workspaces.py
docs/superpowers/plans/: 2026-07-14-image-refinement-and-style-presets.md  2026-07-14-image-studio.md  2026-07-15-conversation-derived-presets.md  2026-07-17-prompt-collaboration-workspace.md  2026-07-17-prompt-composer-markdown.md  2026-07-19-reference-image-numbering.md
docs/superpowers/specs/: 2026-07-14-image-refinement-and-style-presets-design.md  2026-07-14-image-studio-design.md  2026-07-17-prompt-collaboration-workspace-design.md  2026-07-17-prompt-composer-markdown-design.md  2026-07-19-reference-image-numbering-design.md
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: studio.spec.ts
frontend/src/: App.test.tsx  App.tsx  AuthScreen.tsx  PresetManager.test.tsx  PresetManager.tsx  SessionDrawer.tsx  SettingsDrawer.tsx  Studio.test.tsx  Studio.tsx  api.ts  imageSize.test.tsx  imageSize.ts  main.tsx  stylePresets.ts  styles.css  types.ts
