[project]
name = "image-studio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "httpx==0.28.1",
  "cryptography==45.0.5",
  "argon2-cffi==25.1.0",
  "python-multipart==0.0.20",
  "pillow==11.3.0"
]

[project.optional-dependencies]
test = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1"
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["backend"]
